--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Packet Client</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
-    <meta property="twitter:title" content="Packet Client">
-    <meta property="twitter:description" content="The Best Minecraft: Bedrock Utility Mod">
+    <meta property="twitter:title" content="Astro Anti Cheat">
+    <meta property="twitter:description" content="The Best Minecraft: Bedrock Anti Cheat">
     <meta property="twitter:image" content="">
     <meta name="theme-color" content="#F1F1F1">
 </head>
@@ -15,13 +15,13 @@
     <img src="assets/images/banner.png" id="banner">
     <div class="buttons">
         <div type="download" class="download">
-            <a class="button__text" href="https://github.com/PacketDeveloper/Website/raw/main/download/PacketClient.exe" target="_blank">Download</a>
+            <a class="button__text" href="https://github.com/collinmc1228/Website/raw/main/download/" target="_blank">Download</a>
             <span class="button__icon">
                 <ion-icon name="cloud-download-outline"></ion-icon>
             </span>
         </div>
         <div type="discord" class="discord">
-            <a class="button__text" href="https://discord.gg/J3vUwUWRVq" target="_blank">Discord</a>
+            <a class="button__text" href="https://discord.gg/6BvgaFryt4" target="_blank">Discord</a>
             <span class="button__icon">
                 <ion-icon name="logo-discord"></ion-icon>
             </span>
