--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="assets/images/banner.png" id="banner">
     <div class="buttons">
         <div type="download" class="download">
-            <a class="button__text" href="https://github.com/AstroOnTop/Astro-anticheat/releases/tag/v1" target="_blank">Download</a>
+            <a class="button__text" href="https://github.com/AstroOnTop/Astro-anticheat/blob/gh-pages/download/Astro-anticheat.mcpack?raw=true" target="_blank">Download</a>
             <span class="button__icon">
                 <ion-icon name="cloud-download-outline"></ion-icon>
             </span>
