--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta property="twitter:title" content="Astro Anti Cheat">
-    <meta property="twitter:description" content="The Best Minecraft: Bedrock Anti Cheat">
+    <meta property="twitter:description" content="The Best Minecraft: Bedrock Anti Cheat (now archived)">
     <meta property="twitter:image" content="">
     <meta name="theme-color" content="#F1F1F1">
 </head>
